# inih

./: CMakeLists.txt  README.md
test/: CMakeLists.txt  test.ini  test_basic.c
